# logistic-map-precision

./: .gitignore  CMakeLists.txt  README.md  analisis_error.cpp  double_sim.cpp  float_sim.cpp  mpfr_sim.cpp  resultados_comparacion.csv
img/: README.md
results/: calculo_lyapunov.cpp  estimacion_lyapunov.csv  trayectoria_double.csv  trayectoria_float.csv  trayectoria_mpfr.csv
simulation/: double_sim.cpp  float_sim.cpp  mpfr_sim.cpp
